tests/NormalTests/paczka1/fuzzy1/49851844.err
Error in line 6: MwAo8N S58 288,00
Error in line 3: S58 S401 61,0
Error in line 1: MwAo8N S58 74,8
Error in line 5: EHiDoJYN S401 83,7
Error in line 14: S58 S58 60,28
Error in line 33: MwAo8N S264 35,4
